k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: autogiro
  labels:
    app.kubernetes.io/part-of: autogiro
